# motore

./: CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  security.yaml
motore/: Cargo.toml
motore-macros/: Cargo.toml
motore-macros/src/: lib.rs
motore/src/: builder.rs  lib.rs  timeout.rs
motore/src/layer/: identity.rs  layer_fn.rs  layers.rs  mod.rs  service_layer.rs  stack.rs  tower_adapter.rs
motore/src/layer/ext/: map_err.rs  mod.rs
motore/src/make/: make_connection.rs  mod.rs
motore/src/service/: mod.rs  service_fn.rs  tower_adapter.rs
motore/src/service/ext/: map_err.rs  map_response.rs  mod.rs
motore/src/utils/: either.rs  mod.rs  option.rs
